--- a/Archive1.css
+++ b/Archive1.css
@@ -36,19 +36,6 @@ a img{
   max-width: 100px;
 }
 
-/* custom scroll bar */
-::-webkit-scrollbar {
-    width: 10px;
-}
-::-webkit-scrollbar-track {
-    background: #2F3C7E;
-}
-::-webkit-scrollbar-thumb {
-    background: #FBEAEB;
-}
-::selection{
-  background: rgb(0,123,255,0.3);
-}
 .content{
   max-width: 1550px;
   margin: auto;
@@ -73,7 +60,7 @@ a img{
     justify-content: space-between;
 }
 .navbar .logo img{
-  width: 70%;
+  width: 90%;
 }
 .navbar .menu-list{
   display: inline-flex;
@@ -108,6 +95,21 @@ a img{
   z-index: 2;
 }
 
+@media (max-width: 1230px) {
+  .content{
+    padding: 0 60px;
+  }
+}
+@media (max-width: 1100px) {
+  .content{
+    padding: 0 40px;
+  }
+}
+@media (max-width: 900px) {
+  .content{
+    padding: 0 30px;
+  }
+}
 @media (max-width: 868px) {
   body.disabled{
     overflow: hidden;
@@ -146,8 +148,16 @@ a img{
   .navbar.show .menu-list li a{
     margin-left: 0px;
   }
-}
 
+  .navbar .logo img{
+      width: 40%;
+  }
+  
+  .icon img{
+      width: 100%;
+      max-width: 40px;
+  }
+}
 
 
 a{
@@ -156,6 +166,7 @@ a{
 
 .banner{
     background-color: #2F3C7E;
+    padding-top: 10%;
     padding-bottom: 5%;
     color: #FBEAEB;
 }
@@ -218,13 +229,13 @@ a{
     border-radius: 10px;
 }
 
-.content{
+.content1{
     margin-left: 15%;
     margin-right: 15%;
     
 }
 
-.content p{
+.content1 p{
     margin-top: 2%;
     font-size: 1.8vw;
     text-align: justify;
@@ -301,13 +312,13 @@ span{
         border-radius: 10px;
     }
     
-    .content{
+    .content1{
         margin-left: 5%;
         margin-right: 5%;
         margin-bottom: 15%;
     }
     
-    .content p{
+    .content1 p{
         margin-top: 5%;
         font-size: 5vw;
         text-align: justify;
